added user and admin role
